<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".SearchActivity">


    <!-- ==== TOP‑APP‑BAR ==================================================== -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:title="@string/search"
        app:titleTextAppearance="@style/TitleStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ==== SEARCH FIELD =================================================== -->
    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/screen_padding"
        android:paddingEnd="@dimen/screen_padding"

        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/searchToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/SearchStyleText"
            android:inputType="text|textNoSuggestions"
            android:background="@drawable/bg_search_light"
            android:drawableStart="@drawable/ic_search_16"
            android:drawableTint="?attr/searchIconTint"
            android:drawableTintMode="src_in"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:drawablePadding="8dp"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:paddingStart="12dp"
            android:paddingEnd="48dp"
            android:textColor="@color/black"/>

        <!-- кнопка «×» -->
        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="28dp"
            android:layout_gravity="end|center_vertical"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_clear_24"
            android:contentDescription="@string/clear"
            android:visibility="gone"
            app:tint="?attr/searchIconTint" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>